# cpp_project

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  azure-pipelines.yml
libs/clara/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/cpp_project/: CMakeLists.txt  util.cpp  util.hpp
src/cpp_project_lib/: CMakeLists.txt  ProjectType.cpp  config.cpp  config.h  helpers.cpp  helpers.h  text.hpp  variable_matchers.h
templates/common/tests/: CMakeLists.txt
templates/common/tests/src/: test_generic.cpp
templates/exec/: CMakeLists.txt
templates/exec/src/: CMakeLists.txt  main.cpp
templates/exec/src/TARGET_NAME_lib/: CMakeLists.txt
templates/exec/tests/src/: INCLUDE_HELLO.cpp
templates/lib-common/: CMakeLists.txt
templates/lib-common/include/INCLUDE_DIR_NAME/: INCLUDE_DIR_NAME.hpp
templates/lib-common/tests/src/: INCLUDE_HELLO.cpp
templates/lib-compiled/: CMAKE_LIBRARY_DEF.cmake  CMAKE_LIBRARY_SRC.cmake
templates/lib-header/: CMAKE_LIBRARY_DEF.cmake
tests/: CMakeLists.txt
tests/src/: test_ProjectType.cpp  test_config.cpp  test_generic.cpp  test_helpers.cpp  test_regex.cpp
